implemented getters and << operator

--- a/Quatro/Quatro.vcxproj
+++ b/Quatro/Quatro.vcxproj
@@ -105,6 +105,8 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <EnableModules>true</EnableModules>
+      <BuildStlModules>true</BuildStlModules>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Piece.cppm" />
     <ClCompile Include="Quatro.cpp" />
   </ItemGroup>
