--- a/Quatro/Quatro.vcxproj.filters
+++ b/Quatro/Quatro.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Piece.cppm">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Piece.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
